# Github54

lab1/factorial/: Factorial.cpp  Factorial.h  main.cpp
lab2/: Array2D.cpp  Array2d.cpp  Array2d.h.h
lab3/: MinimalTimeDifference.cpp  MinimalTimeDifference.h
lab5/: CMakeLists.txt
lab5/xxx/: CMakeLists.txt  XXX.cpp
lab6/: CMakeLists.txt
lab6/point/: CMakeLists.txt  Point.cpp  Point.h  main.cpp
lab8/: CMakeLists.txt
lab8/pesel/: CMakeLists.txt  main.cpp  pesel.h
lab8/zadanie1/: CMakeLists.txt  main.cpp
lab9/: CMakeLists.txt
lab9/serializable/: CMakeLists.txt  Serialization.cpp  Serialization.h
tests/lab1test/: CMakeLists.txt  FactorialTest.cpp
